further jasmine stuff

--- a/tests/jasmine/index.html
+++ b/tests/jasmine/index.html
@@ -3,9 +3,8 @@
 <head>
 	<title>Jasmine Spec Runner</title>
 	<link rel="stylesheet" type="text/css" href="../../js/vendor/jasmine-core/lib/jasmine-core/jasmine.css">
-	<script type="text/javascript" src="../../js/vendor/requirejs/require.js" data-main="SpecRunner"></script>
-	<script type="text/javascript" src="../../js/require_config.js" data-main="SpecRunner"></script>
-	<script type="text/javascript" src="SpecRunner.js" data-main="SpecRunner"></script>
+	<script type="text/javascript" src="../../js/vendor/requirejs/require.js"></script>
+	<script type="text/javascript" src="SpecRunner.js"></script>
 </head>
 <body>
 <div id="sandbox" style="overflow: hidden; height: 1px;"></div>
